objects/Invoices_Local__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Local)</relationshipLabel>
        <relationshipName>Invoices_Local</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingContactLastName__c</fullName>
        <formula>Billing_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingContactLastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingContactName__c</fullName>
        <formula>Billing_Contact__r.FirstName +&apos; &apos;+ Billing_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingContactName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Title__c</fullName>
        <formula>Billing_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact Record For The Invoice Administrator</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Local)</relationshipLabel>
        <relationshipName>Invoices_Local</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <inlineHelpText>This Is The Frequency In Which The Invoice Is Generated. Monthly Is Most Commonly Used.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>9 Month</fullName>
                </value>
                <value>
                    <fullName>10 Month</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Preference__c</fullName>
        <label>Billing Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Bill</fullName>
                </value>
                <value>
                    <fullName>List/Premium Bill</fullName>
                    <default>true</default>
                    <label>List/Premium Bill</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBP_Bill_Group_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated via API response from Customer Master</inlineHelpText>
        <label>CBP Bill Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Billing_Contact__r.MailingCity</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Grace_Days__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>The amount of days Anthem will pay claims during the grace period.</inlineHelpText>
        <label>Claim Grace Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>31 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>999 days (NY only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle_Code__c</fullName>
        <description>This field is being added to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Indicates day of the month the invoice bill is scheduled to be generated, from 01 through 31.</inlineHelpText>
        <label>Cycle Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Billing_Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Billing_Contact__r.Fax</formula>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Days__c</fullName>
        <inlineHelpText># Of Days Before A Bill Entity Becomes Delinquent. Claims Will Not Pay If The Service Date Is After The Group&apos;s Paid To Date Plus Grace Days. Typically Ranges From 30 – 90 Days.</inlineHelpText>
        <label>Grace Days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                    <label>30 days</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>31 days</label>
                </value>
                <value>
                    <fullName>60</fullName>
                    <label>60 days</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>90 days</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>[&quot;90 days&quot;,&quot;30 days&quot;]</fullName>
                    <isActive>false</isActive>
                    <label>[&quot;90 days&quot;,&quot;30 days&quot;]</label>
                </value>
                <value>
                    <fullName>[[&quot;90 days&quot;,&quot;31 days&quot;,&quot;60 days&quot;],[&quot;90 days&quot;,&quot;31 days&quot;,&quot;60 days&quot;]]</fullName>
                    <isActive>false</isActive>
                    <label>[[&quot;90 days&quot;,&quot;31 days&quot;,&quot;60 days&quot;],[&quot;90 days&quot;,&quot;31 days&quot;,&quot;60 days&quot;]]</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Invoices (Local)</relationshipLabel>
        <relationshipName>Invoices_Local_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>If_Other_Enter_Invoice_Sorting_Option_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, Enter Invoice Sorting Option 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Enter_Invoice_Sorting_Option__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, Enter Invoice Sorting Option 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Cancel_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Format__c</fullName>
        <label>Invoice Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D (Detailed)</fullName>
                </value>
                <value>
                    <fullName>S (Summary)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Sorting_Option_2__c</fullName>
        <label>Invoice Sorting Option 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Geographic Location</fullName>
                </value>
                <value>
                    <fullName>Payroll Location</fullName>
                </value>
                <value>
                    <fullName>Salary Class</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Store Number</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Sorting_Option__c</fullName>
        <label>Invoice Sorting Option 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Geographic Location</fullName>
                </value>
                <value>
                    <fullName>Payroll Location</fullName>
                </value>
                <value>
                    <fullName>Salary Class</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Store Number</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Billing_Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sorting_Order_For_Option_1__c</fullName>
        <label>Sorting Order For Option 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sorting_Order_For_Option_2__c</fullName>
        <label>Sorting Order For Option 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Billing_Contact__r.MailingState</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>Billing_Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tolerance_Level__c</fullName>
        <inlineHelpText>This Is The Minimum Percent Payment Of An Invoice Required Before The Paid To Date Is Advanced. Minimum Percent Is 80%.</inlineHelpText>
        <label>Tolerance Level %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type_of_Bill__c</fullName>
        <label>Type of Bill</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <label>Electronic/Email</label>
                </value>
                <value>
                    <fullName>Mail</fullName>
                    <label>Print/Mail</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Billing_Contact__r.MailingPostalCode</formula>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Invoices (Local)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoices Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices (Local)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>